--- a/src/manifest.production.json
+++ b/src/manifest.production.json
@@ -1,6 +1,6 @@
 {
     "name": "__MSG_extName__",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "manifest_version": 2,
     "default_locale": "en",
     "description": "__MSG_extDescription__",
@@ -19,7 +19,7 @@
             "js/common/background.js",
             "js/common/utils.js"
         ],
-        "persistent": false
+        "persistent": true
     },
     "options_page": "options.html",
     "browser_action": {
@@ -29,7 +29,8 @@
     "permissions": [
         "tabs",
         "contextMenus",
-        "storage"
+        "storage",
+        "background"
     ],
 
     "icons": {
